Changelog for Touchdown
=======================

0.3.0 (unreleased)
------------------

- Support for notifying NewRelic after a deployment.


0.2.0 (2015-10-12)
------------------

- Add a new ``touchdown ssh`` and ``touchdown scp`` commands.

- Change how SSH connection to an ASG is achieved (allows private ip addresses
  to be used when on same network, even when using ``.get_auto_scaling_group``.

- The names of resources used when building AMI's are now randomised (which
  should enable parallelism).

- Now uses ``botocore>=1.2.10`` and ``progressbar2>=3.0``.


0.0.31 (2015-09-07)
-------------------

- Fix database rollback.


0.0.30 (2015-09-07)
-------------------

- Add database snapshot goal and command::

    touchdown snapshot DB_NAME SNAPSHOT_NAME


0.0.29 (2015-08-27)
-------------------

- Now requires at least fuselage 0.0.10 to ensure that we don't hit corner
  cases in streaming unicode output from execute resources.

- Simplifies string handling in ssh client to avoid yet more unicode handling
  edge cases.


0.0.28 (2015-08-24)
-------------------

- Support streaming log output to CloudWatch logs instead of (or as well as) the console.

- Output information about remaining tasks so that long running tasks don't
  look like they are hung. This is useful in Travis CI where the silence causes
  builds/deployments to be terminated.

- Better error handling for parallel cases.


0.0.27 (2015-07-31)
-------------------

- Fix planning phase of auto scaling policy creation for empty environments.

- Fix tearing down autoscaling policies.

- Fix tearing down log metric filters.


0.0.26 (2015-07-27)
-------------------

- Add CloudWatch Logs MetricFilter resources. This allows metrics to be
  creating from a log stream.

- Drop the Metric resource.


0.0.25 (2015-07-23)
-------------------

- Fix creating dummy metric.


0.0.24 (2015-07-22)
-------------------

- Fix alarm changes not applying and fix finding alarms when dimensions are involved.
